# agies-incident-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  branch-protection.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  test.yml
docs/architecture/: README.md  data-access-patterns.md
frontend/: package.json  tsconfig.json
frontend/graphql/: queries.ts
frontend/src/: App.tsx  aws-exports.ts  index.tsx  theme.ts
frontend/src/components/Dashboard/: MetricCard.tsx
frontend/src/hooks/: useRealTimeUpdates.ts
frontend/src/layout/: index.ts
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/IncidentDetail/: index.tsx
frontend/src/services/: api.ts  incidentService.ts
frontend/src/types/: index.ts
infrastructure/: outputs.md  quickstart.md  template.yml
infrastructure/appsync/: schema.graphql
infrastructure/appsync/resolver/: get-incident-resolver.vtl
infrastructure/layers/: buld-layers.sh
infrastructure/parameters/: prod.json
infrastructure/stepfunctions/: incident-workflow.asl.json
scripts/: init-aws.sh  init-repo.sh  setup-infrastructure.sh  setup-local-dynamodb.py
scripts/dynamodb/: create-tables.js  seed-data.js
src/genai_scribe/: app.py
src/incident_ingestor/: app.py
src/layers/shared/python/: config.py  dynamodb_client.py  event_publisher.py  exceptions.py  models.py  validators.py
src/notification_dispatcher/: app.py
src/realtime_propagator/: app.py
src/shared/: __init__.py  constants.py  dynamodb_client.py  event_publisher.py  models.py  utils.py  validators.py
src/triage_function/: app.py
src/workflow_support/: check_status.py  validate_input.py
tests/e2e/: test_complete_incident_flow.py
tests/integration/: test_incident_workflow.py
tests/local/: env.json
tests/unit/: test_incident_ingestor.py  test_notification_dispatcher.py
